# c_project

./: CMakeLists.txt  Makefile  README.md
include/: commands.h  constants.h  crc32.h  diskstore.h  repos.h  serializer.h  structs.h  utils.h
src/: commands.c  crc32.c  diskstore.c  main.c  repos.c  serializer.c  utils.c
